force-app/main/default/objects/GICModel__c/GICModel__c.object-meta.xml
<CustomObject>
    <label>GICModel</label>
    <nameField>
        <label>GICModel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GICModels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>