force-app/main/default/objects/GICModel__c/fields/cloudId__c.field-meta.xml
<CustomField>
    <fullName>cloudId__c</fullName>
    <label>cloudId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>