force-app/main/default/objects/GICModel__c/fields/modelId__c.field-meta.xml
<CustomField>
    <fullName>modelId__c</fullName>
    <label>modelId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>