force-app/main/default/objects/GICModel__c/fields/projectId__c.field-meta.xml
<CustomField>
    <fullName>projectId__c</fullName>
    <label>projectId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>